@@ -25,6 +25,7 @@ from AbstractCriterion import AbstractCriterion
 from interfaces import Criterion
 from Topic import Topic
 
+_as_of = DateTime  # Allow for controlled value when testing
 
 class FriendlyDateCriterion( AbstractCriterion ):
     """
@@ -126,7 +127,8 @@ class FriendlyDateCriterion( AbstractCriterion ):
                 elif operation == 'min':
                     operation = 'max'
 
-            date = DateTime() + value
+            now = _as_of()
+            date = now + value
 
             if operation == 'within_day':
                 # When items within a day are requested, the range is between
@@ -137,7 +139,7 @@ class FriendlyDateCriterion( AbstractCriterion ):
             elif operation == 'min':
                 if value != 0:
                     if self.daterange == 'old':
-                        date_range = (date, DateTime())
+                        date_range = (date, now)
                         return ( ( field, { 'query': date_range
                                           , 'range': 'min:max'
                                           } ), )
@@ -154,7 +156,7 @@ class FriendlyDateCriterion( AbstractCriterion ):
                     if self.daterange == 'old':
                         return ((field, {'query': date, 'range': operation}),)
                     else:
-                        date_range = (DateTime(), date.latestTime())
+                        date_range = (now, date.latestTime())
                         return ( ( field, { 'query': date_range
                                           , 'range': 'min:max'
                                           } ), )
