@@ -30,6 +30,12 @@ from Products.CMFCore.tests.base.dummy import DummyContent
 from Products.CMFTopic.Topic import Topic
 from common import CriterionTestCase
 
+def _replace_DC__as_of(new_callable):
+    from Products.CMFTopic import DateCriteria
+    old_value = DateCriteria._as_of
+    DateCriteria._as_of = new_callable
+    return old_value
+
 
 class FriendlyDateCriterionTests(CriterionTestCase):
 
@@ -46,6 +52,13 @@ class FriendlyDateCriterionTests(CriterionTestCase):
             , 'operation': 'within_day'
             , 'daterange': 'ahead'
             }
+
+    def setUp(self):
+        self._now = DateTime()
+        self._old_as_of = _replace_DC__as_of(lambda: self._now)
+
+    def tearDown(self):
+        _replace_DC__as_of(self._old_as_of)
 
     def _getTargetClass(self):
         from Products.CMFTopic.DateCriteria import FriendlyDateCriterion
@@ -171,6 +184,7 @@ class FriendlyDateCriterionFunctionalTests(RequestTest):
         type_crit.edit(value='Dummy Content')
         self.criterion = self.topic.getCriterion('modified')
         self.now = DateTime()
+        self._old_as_of = _replace_DC__as_of(lambda: self.now)
 
         for i in self.day_diffs:
             dummy_id = 'dummy%i' % i
@@ -181,6 +195,9 @@ class FriendlyDateCriterionFunctionalTests(RequestTest):
             dummy_ob.modified_date = self.now + i
             dummy_ob.reindexObject()
 
+
+    def beforeTearDown(self):
+        _replace_DC__as_of(self._old_as_of)
 
     def test_Harness(self):
         # Make sure the test harness is set up OK
